# llilc

include/GcInfo/: GcInfo.h
include/Jit/: LLILCJit.h  compiler.h
include/Reader/: readerir.h
lib/: CMakeLists.txt
lib/DisAsm/: CMakeLists.txt  disasm.cpp
lib/DisAsm/.nuget/: Microsoft.DotNet.Disasm.nuspec  runtime.json  toolchain.osx.10.10-x64.Microsoft.DotNet.Disasm.nuspec  toolchain.ubuntu.14.04-x64.Microsoft.DotNet.Disasm.nuspec  toolchain.win7-x64.Microsoft.DotNet.Disasm.nuspec
lib/GcInfo/: GcInfo.cpp
lib/Jit/: LLILCJit.cpp  jitoptions.cpp
lib/Reader/: abisignature.cpp  readerir.cpp
test/: LLILCTestEnv.cmd  exclusion.targets  llilc_run.py  llilc_runtest.py  make_sln.py
